--- a/rasp/views/index.ejs
+++ b/rasp/views/index.ejs
@@ -23,7 +23,7 @@
                         <td><%= info.server %></td>
                     </tr>
                     <tr>
-                        <th scope="row">재생 중인 동영상</th>
+                        <th scope="row">재생 중인 영상</th>
                         <td><%= info.video_name %></td>
                     </tr>
                 </table>
